sfdx_project/force-app/main/default/objects/Account/fields/Stakeholder_Type_Reference__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Type_Reference__c</fullName>
    <label>Stakeholder Type Reference</label>
    <type>TextArea</type>
</CustomField>