sfdx_project/force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preparation</fullName>
                <default>true</default>
                <label>Preparation</label>
            </value>
            <value>
                <fullName>Reached Out</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Agreement Sent</fullName>
            </value>
            <value>
                <fullName>Agreement Signed</fullName>
            </value>
            <value>
                <fullName>Agreement Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>