sfdx_project/force-app/main/default/objects/Account/fields/testData__c.field-meta.xml
<CustomField>
    <fullName>testData__c</fullName>
    <label>testData</label>
    <type>Date</type>
</CustomField>