sfdx_project/force-app/main/default/objects/Account/fields/Text_GIT_test__c.field-meta.xml
<CustomField>
    <fullName>Text_GIT_test__c</fullName>
    <label>Text GIT test</label>
    <length>55</length>
    <type>Text</type>
</CustomField>