sfdx_project/force-app/main/default/objects/Account/fields/TextTest2__c.field-meta.xml
<CustomField>
    <fullName>TextTest2__c</fullName>
    <label>TextTest2</label>
    <length>55</length>
    <type>Text</type>
</CustomField>