sfdx_project/force-app/main/default/objects/Account/fields/TextTest__c.field-meta.xml
<CustomField>
    <fullName>TextTest__c</fullName>
    <label>TextTest</label>
    <length>66</length>
    <type>Text</type>
</CustomField>