sfdx_project/force-app/main/default/objects/Account/fields/TTTest_chechbox__c.field-meta.xml
<CustomField>
    <fullName>TTTest_chechbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TTTest chechbox</label>
    <type>Checkbox</type>
</CustomField>