sfdx_project/force-app/main/default/objects/Account/fields/Web_Research__c.field-meta.xml
<CustomField>
    <fullName>Web_Research__c</fullName>
    <label>Web Research</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>