sfdx_project/force-app/main/default/objects/Account/fields/Website_Rating__c.field-meta.xml
<CustomField>
    <fullName>Website_Rating__c</fullName>
    <label>Website Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Lack of cohesive aesthetic</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Outdated appearance but well thought out</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Clean, modern website</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Multiple locations listed on website</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Inventory displayed on website</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>