sfdx_project/force-app/main/default/objects/Account/recordTypes/Hiring_Resource.recordType-meta.xml
<RecordType>
    <fullName>Hiring_Resource</fullName>
    <active>true</active>
    <label>Hiring Resource</label>
</RecordType>