sfdx_project/force-app/main/default/objects/Account/recordTypes/Manufacturer_Supplier.recordType-meta.xml
<RecordType>
    <fullName>Manufacturer_Supplier</fullName>
    <active>true</active>
    <label>Manufacturer - Supplier</label>
</RecordType>