sfdx_project/force-app/main/default/objects/Account/validationRules/AcctSeed__Account_Payable_Terms_Positive_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Account_Payable_Terms_Positive_Value</fullName>
    <active>false</active>
    <description>The payable terms field must be a positive value.</description>
    <errorConditionFormula>AcctSeed__Account_Payable_Terms__c &lt; 0</errorConditionFormula>
    <errorDisplayField>AcctSeed__Account_Payable_Terms__c</errorDisplayField>
    <errorMessage>The payable terms field must be a positive number.</errorMessage>
</ValidationRule>