sfdx_project/force-app/main/default/objects/Account/validationRules/name_val.validationRule-meta.xml
<ValidationRule>
    <fullName>name_val</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &quot;first&quot;</errorConditionFormula>
    <errorMessage>first - no</errorMessage>
</ValidationRule>