sfdx_project/force-app/main/default/objects/Account/validationRules/phone_val.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_val</fullName>
    <active>true</active>
    <errorConditionFormula>Phone = &apos;123123123&apos;</errorConditionFormula>
    <errorMessage>phone no</errorMessage>
</ValidationRule>