sfdx_project/force-app/main/default/objects/Account/validationRules/phone_val_rule2.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_val_rule2</fullName>
    <active>true</active>
    <errorConditionFormula>Phone = &apos;123&apos;</errorConditionFormula>
    <errorMessage>phone 123</errorMessage>
</ValidationRule>