sfdx_project/force-app/main/default/objects/Account/listViews/AcctSeed__Statement_Needed.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Statement_Needed</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Statement Needed</label>
</ListView>