sfdx_project/force-app/main/default/objects/Account/listViews/AcctSeed__X1099.listView-meta.xml
<ListView>
    <fullName>AcctSeed__X1099</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>x1099 Vendors</label>
</ListView>