sfdx_project/force-app/main/default/objects/Account/listViews/Hiring_Resource.listView-meta.xml
<ListView>
    <fullName>Hiring_Resource</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Hiring_Resource</value>
    </filters>
    <label>Hiring Resource</label>
</ListView>