sfdx_project/force-app/main/default/objects/Account/listViews/Not_Not_Interested.listView-meta.xml
<ListView>
    <fullName>Not_Not_Interested</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Prospect_Account_Status__c</field>
        <operation>notEqual</operation>
        <value>Not Interested</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Prospect</value>
    </filters>
    <label>Potentially Interested</label>
</ListView>