sfdx_project/force-app/main/default/objects/Account/listViews/Prospect_Accounts.listView-meta.xml
<ListView>
    <fullName>Prospect_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Prospect</value>
    </filters>
    <label>Prospect Accounts</label>
</ListView>