sfdx_project/force-app/main/default/objects/Account/listViews/TinaBAccounts.listView-meta.xml
<ListView>
    <fullName>TinaBAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>TBent</value>
    </filters>
    <label>Tina&apos;s Accounts</label>
</ListView>